--- a/sigproc.bib
+++ b/sigproc.bib
@@ -166,8 +166,8 @@
 }
 
 @TechReport{emmc_2010,
-        author = {{JEDEC} Solid State Technology Association},
-        title  = {{Embedded Multimediacard(e-MMC) eMMC/Card Product
+        author = {{JEDEC Solid State Technology Association}},
+        title  = {{Embedded Multimediacard (e-MMC) eMMC/Card Product
                   Standard, High Capacity}},
         month  = mar,
         year   = 2010,
