--- a/lc.tex
+++ b/lc.tex
@@ -44,7 +44,7 @@ its performance to the existing Chromium implementation.
 
 We achieve a ten-fold performance improvement in basic cache operations (as
 measured on a Nexus 7 (2012 version) tablet), while in the worst measured case
-increasing miss rate by less than 1\% (from 62.1\% to 63.1\%) and more
+decreasing hit rate by less than 1\% (from 37.9\% to 36.1\%) and more
 typically by less than 0.5\%. For network
 bandwidths of 350\,Kb or higher the increased cache performance will
 more than make up for the decrease in hit rate; the effect is more
@@ -154,9 +154,12 @@ than 10\,KiB of RAM.
 
 As an example, in Figure~\ref{fig:seq-throughput} we see sequential read and
 write throughput for direct I/O (i.e. un-cached) requests to a 16\,MiB file on a
-Galaxy Nexus phone running the Android operating system. Full write bandwidth is
-not achieved for the write sizes less than 1\,MiB and performance falls off
-drastically for write sizes less than 64\,KiB.
+Nexus 7 tablet running the Android operating system. Write bandwidth
+is less than 1\,MB/s for write sizes under 8\,KiB, and does not reach
+full bandwidth until 4\,MiB. In Figure~\ref{fig:rnd-throughput} we see
+throughput for small random reads and writes; write througput is
+17\,KB/s for 512-byte writes, rising to 190\,KB/s for 4096-byte
+writes. 
 
 \begin{figure}[t]
   \begin{center}
@@ -174,13 +177,13 @@ drastically for write sizes less than 64\,KiB.
   \label{fig:rnd-throughput}
 \end{figure}
 
-This performance for sequential I/O is comparable to what was observed in the
+These performance measurements are comparable to what was observed in the
 recent work of Kim et al.~\cite{kim12} which measured the performance of
-external storage (MicroSD cards) as well as on-board flash (eMMC) on a Nexus One
-phone.  Not surprisingly, we found the random I/O performance to be at an
-unusable level (0.02\,MiB/s).  This is a known artifact of the flash translation
+external storage (MicroSD cards) on a Nexus One
+phone.  In both cases, performance for small random writes was found
+to be virtually unusable.  This is a known artifact of the flash translation
 algorithms used on controllers with limited memory~\cite{Kim2002:FTL}, which
-with modern flash chips may suffer 128 times or worse decrease in throughput for
+with modern flash chips may suffer 128$\times$ or worse decrease in throughput for
 random writes~\cite{boboila_performance_2011}.
 
 \subsection{Log-structured cache}
@@ -384,7 +387,7 @@ inserted into the cache, and the number of entries that can be stored in a
 segment is determined by the number of slots in the segment summary.  Entries
 larger than a segment are stored as separate files on disk, just like the
 current cache does.  The segment summary is sized assuming a mean entry size of
-4\,KiB, based on trace data as shown in Figure~\ref{fig:log-size-dist}.
+4\,KiB, a conservative value based on trace data shown in Figure~\ref{fig:log-size-dist}.
 
 \begin{figure}[t]
   \begin{center}
